Reorganize solution folders

--- a/Alura_CSharpProgramming/Alura_CSharpProgramming_Parte1/Alura_CSharpProgramming_Parte1.csproj
+++ b/Alura_CSharpProgramming/Alura_CSharpProgramming_Parte1/Alura_CSharpProgramming_Parte1.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Parte02\" />
+  </ItemGroup>
+
 </Project>
