--- a/Alura_CSharpProgramming/Alura_CSharpProgramming_Parte4/Alura_CSharpProgramming_Parte4.csproj
+++ b/Alura_CSharpProgramming/Alura_CSharpProgramming_Parte4/Alura_CSharpProgramming_Parte4.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DefineConstants>TRACE;DEBUG;BASIC</DefineConstants>
+  </PropertyGroup>
+
 </Project>
